@@ -17,8 +17,12 @@ apport (0.85) UNRELEASED; urgency=low
     encountering a virtual package.
   * apport/report.py, obsolete_packages(): Do not consider virtual packages as
     obsolete.
+  * apport/crashdb_impl/launchpad.py: Do a bogus call to Bug() in the ctor.
+    This initializes python-launchpad-bugs to use a cookie for the urlopen in
+    BugList, so that get_unretraced() and get_dup_unchecked() return private
+    bugs, too. This works around LP #122126.
 
- -- Martin Pitt <martin.pitt@ubuntu.com>  Wed, 20 Jun 2007 10:41:16 +0200
+ -- Martin Pitt <martin.pitt@ubuntu.com>  Mon, 25 Jun 2007 16:38:43 +0200
 
 apport (0.84) gutsy; urgency=low
 
